--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@
 
 #article {
 	padding-top: 10px;
-	border-style: solid;
 	border-width: 2px; 
 	margin-left: 20px;
 	position: absolute;  
@@ -51,11 +50,10 @@
 	height: 200px;
 	font-size: 18px;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	z-index: 1
+	background-color: DimGray;
 }
 
 #Titles {
-	border-style: solid;
 	font-size: 18px;
 	margin-top: 70px;
 	width: 400px;
@@ -64,22 +62,26 @@
 	padding-right: 45px;
 	padding-top: 1px;
 	background-color: #ebebeb;
+	position: absolute;
+	bottom: 200px;
+	z-index: 20;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	z-index: 2;
 }
 
 
 #paragraph {
-	border-style: solid;
 	background-color: #ebebeb;
 	text-align: center;
 	margin-left: 45px;
 	margin-top: 20px;
 	padding: 1.5px;
 	width: 400px;
-	height: 50px;
+	height: 50px;s
 	font-size: 18px;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	position: absolute;
+	bottom: 130px;
+	z-index: 30;
 }
 
 
